--- a/tutorials/02_02_time_dependent_data.ipynb
+++ b/tutorials/02_02_time_dependent_data.ipynb
@@ -16,9 +16,17 @@
     "\n",
     "- Opening and navigating through WelDX files \n",
     "\n",
-    "> TODO: link tutorial, once it is merged\n",
+    "> TODO: link tutorial, once it is merged"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Plotting data\n",
     "\n",
-    "## Accessing the data \n",
     "\n",
     "Two important quantities in welding applications are the welding current and welding voltage.\n",
     "Both are constantly monitored during an experiment and the obtained data is a one dimensional array with time being its only dimension.\n",
@@ -61,16 +69,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "current = wxfile[\"welding_current\"]\n",
-    "type(current)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "current = wxfile[\"welding_current\"].data\n",
     "type(current)"
    ]
@@ -83,8 +81,74 @@
     "\n",
     "The object we extracted is of type `TimeSeries`.\n",
     "This is a special type provided by WelDX to deal with time dependent data.\n",
+    "\n",
+    "If you are familiar with the `matplotlib` package, it shouldn't be to difficult for you to plot the data, once you know how to get it out of the `TimeSeries`.\n",
+    "We will talk about this later in this tutorial.\n",
+    "However, the `TimeSeries` class provides its own `plot` method to visualize the data it contains:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `plot` method is an easy an convinient way to quickly visualize a `TimeSeries`.\n",
+    "It labels the axes automatically and attaches the corresponding units to them.\n",
+    "\n",
+    "Depending on the Python environment you are using, there are some things to consider.\n",
+    "Since the `plot` method uses `matplotlib` internally, you have to call the `matplotlib.pyplot.show` function manually after using `plot` when running a regular Python script file.\n",
+    "Otherwise the plot won't show up.\n",
+    "\n",
+    "This is not the case if you work with a jupyter notebook, where the plots are generated after each cell execution.\n",
+    "However, while a regular script will open an interactive window for each plot, the plots inside of a notebook can't be modified without additional commands.\n",
+    "To enable interactive `matplotlib` plots inside of a jupyter notebook, run the following magic command:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's plot the welding voltage. \n",
+    "Try to interact with the plot if you are running this tutorial as a jupyter notebook.\n",
+    "\n",
+    "> HINT: Remember that you can run the code of this tutorial by clicking on the binder link at the beginning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " wxfile[\"welding_voltage\"].plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accessing the data \n",
+    "\n",
+    "Now that we know how to get a quick overview over the data by visualizing it with the `plot` method, let's have a look on what else we can do with a `TimeSeries`.\n",
     "While any number of dimensions in addition to time are supported, we expect the welding current to have no further dimensions.\n",
-    "We can easily check this using the `shape` property of the `TimeSeries`:"
+    "We can easily check this using the `shape` property:"
    ]
   },
   {
@@ -103,7 +167,7 @@
     "From the returned value we see that the data indeed only consists of a single dimension.\n",
     "Furthermore, we get the exact number of data points that are stored in the time series.\n",
     "\n",
-    "Since the main goal of WelDX is to conserye all data necessary to fully understand a conducted experiment, we can also get the unit of the data by printing the `units` property:"
+    "Since the main goal of WelDX is to conserve all data necessary to fully understand a conducted experiment, we can also get the unit of the data by printing the `units` property:"
    ]
   },
   {
@@ -190,67 +254,6 @@
    "outputs": [],
    "source": [
     "type(current.data_array.data.magnitude)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Plotting data\n",
-    "\n",
-    "If you are familiar with the `matplotlib` package, it shouldn't be to difficult for you to plot the data, now that you know how to get access it.\n",
-    "However, the `TimeSeries` class provides its own `plot` method to visualize the data it contains:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "current.plot()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you use the `plot` method of the `TimeSeries`, the axes get correctly labeled with the corresponding units attached to it.\n",
-    "But there are some things to consider depending on the Python environment you are using.\n",
-    "Since the `plot` method uses `matplotlib` internally, you have to call the `matplotlib.pyplot.show` function manually after using `plot` when running a regular Python script file.\n",
-    "Otherwise the plot won't show up.\n",
-    "\n",
-    "This is not the case if you work with a jupyter notebook, where the plots are generated after each cell execution.\n",
-    "However, while a regular script will open an interactive window for each plot, the plots inside of a notebook can't be modified without additional commands.\n",
-    "To enable interactive `matplotlib` plots inside of a jupyter notebook, run the following magic command:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib widget"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now let's plot the welding voltage. \n",
-    "Try to interact with the plot if you are running this tutorial as a jupyter notebook.\n",
-    "\n",
-    "> HINT: Remember that you can run the code of this tutorial by clicking on the binder link at the beginning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " wxfile[\"welding_voltage\"].plot()"
    ]
   },
   {
