--- a/tutorials/02_02_time_dependent_data.ipynb
+++ b/tutorials/02_02_time_dependent_data.ipynb
@@ -167,7 +167,8 @@
     "From the returned value we see that the data indeed only consists of a single dimension.\n",
     "Furthermore, we get the exact number of data points that are stored in the time series.\n",
     "\n",
-    "Since the main goal of WelDX is to conserve all data necessary to fully understand a conducted experiment, we can also get the unit of the data by printing the `units` property:"
+    "We already saw in axes labeling of the plots, that the `TimeSeries` also stores the units of the data \n",
+    "We can get the unit of the data by calling the `units` property:"
    ]
   },
   {
@@ -244,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For xarray use `.data` to get the data as `pint.Quantity` and then `.magnitude` to receive a `numpy.ndarray`:"
+    "For xarray use `.data` to get the data as `pint.Quantity` and then `.magnitude` or `.m` to receive a `numpy.ndarray`:"
    ]
   },
   {
