--- a/tutorials/02_02_time_dependent_data.ipynb
+++ b/tutorials/02_02_time_dependent_data.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "from weldx import WeldxFile\n",
     "\n",
-    "wxfile = WeldxFile(\"single_pass_weld.weldx\")"
+    "wxfile = WeldxFile(\"single_pass_weld.wx\")"
    ]
   },
   {
