--- a/tutorials/02_02_time_dependent_data.ipynb
+++ b/tutorials/02_02_time_dependent_data.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "**This tutorial covers:**\n",
     "\n",
-    "- Accessing and visualizing time dependent data stored inside of a `TimeSeries` class\n",
+    "- Accessing and visualizing time dependent data stored inside a `TimeSeries` class\n",
     "\n",
     "**Requirements:**\n",
     "\n",
@@ -29,7 +29,7 @@
     "\n",
     "\n",
     "Two important quantities in welding applications are the welding current and welding voltage.\n",
-    "Both are constantly monitored during an experiment and the obtained data is a one dimensional array with time being its only dimension.\n",
+    "Both are constantly monitored during an experiment, and the obtained data is a one dimensional array with time being its only dimension.\n",
     "We will extract both from the file and see what we can do with it.\n",
     "First we read the file and get an overview over its content as we learned in the previous tutorial:"
    ]
@@ -82,7 +82,7 @@
     "The object we extracted is of type `TimeSeries`.\n",
     "This is a special type provided by WelDX to deal with time dependent data.\n",
     "\n",
-    "If you are familiar with the `matplotlib` package, it shouldn't be to difficult for you to plot the data, once you know how to get it out of the `TimeSeries`.\n",
+    "If you are familiar with the `matplotlib` package, it shouldn't be too difficult for you to plot the data, once you know how to get it out of the `TimeSeries`.\n",
     "We will talk about this later in this tutorial.\n",
     "However, the `TimeSeries` class provides its own `plot` method to visualize the data it contains:"
    ]
@@ -100,16 +100,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `plot` method is an easy an convinient way to quickly visualize a `TimeSeries`.\n",
+    "The `plot` method is an easy and convenient way to quickly visualize a `TimeSeries`.\n",
     "It labels the axes automatically and attaches the corresponding units to them.\n",
     "\n",
     "Depending on the Python environment you are using, there are some things to consider.\n",
     "Since the `plot` method uses `matplotlib` internally, you have to call the `matplotlib.pyplot.show` function manually after using `plot` when running a regular Python script file.\n",
-    "Otherwise the plot won't show up.\n",
+    "Otherwise, the plot won't show up.\n",
     "\n",
     "This is not the case if you work with a jupyter notebook, where the plots are generated after each cell execution.\n",
-    "However, while a regular script will open an interactive window for each plot, the plots inside of a notebook can't be modified without additional commands.\n",
-    "To enable interactive `matplotlib` plots inside of a jupyter notebook, run the following magic command:"
+    "However, while a regular script will open an interactive window for each plot, the plots inside a notebook can't be modified without additional commands.\n",
+    "To enable interactive `matplotlib` plots inside a jupyter notebook, uncomment and run the following magic command:"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget"
+    "# %matplotlib widget"
    ]
   },
   {
@@ -225,10 +225,10 @@
    "metadata": {},
    "source": [
     "Xarray is a powerful tool that makes working with multi-dimensional arrays easier.\n",
-    "When performing operations on an `xarray.DataArray`, it automatically figures out which dimensions of the oprands are compatible with each other and how they need to be combined.\n",
+    "When performing operations on an `xarray.DataArray`, it automatically figures out which dimensions of the operands are compatible with each other and how they need to be combined.\n",
     "Visit [the xarray documentation](http://xarray.pydata.org/en/stable/) to learn how to work with xarray classes.\n",
     "\n",
-    "We recommend using either xarray or pint when working with the data, but if you feel more compfortable using NumPy, you can convert both types easily to a `numpy.ndarray`.\n",
+    "We recommend using either xarray or pint when working with the data, but if you feel more comfortable using NumPy, you can convert both types easily to a `numpy.ndarray`.\n",
     "For pint use `.magnitude` or the short version `.m`:"
    ]
   },
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **ToDo:** TimeSeries tutorial verlinken"
+    "> **ToDo:** link TimeSeries tutorial"
    ]
   },
   {
