--- a/tutorials/01_01_introduction.ipynb
+++ b/tutorials/01_01_introduction.ipynb
@@ -57,7 +57,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wxfile = WeldxFile(\"single_pass_weld.weldx\")"
+    "wxfile = WeldxFile(\"single_pass_weld.wx\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inspecting the file content in a Jupyter session\n",
+    "\n",
+    "If you are running a jupyter notebook, you can use the `show_asdf_header` method of `WeldxFile` to get a nicely rendered overview of the file content. \n",
+    "The output might vary if you are running the classic notebook environment or a Jupyter-Lab environment.\n",
+    "In the latter case, you will get an interactive, clickable tree view to navigate through the file content:\n",
+    "\n",
+    "> HINT: Remember that you can start a jupyter-lab version of this notebook in our online documentation by clicking at the binder link at the start of this tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "wxfile.show_asdf_header()"
    ]
   },
   {
@@ -66,14 +90,12 @@
    "source": [
     "### Inspecting the File content with pure Python\n",
     "\n",
-    "A simple way to get visualize the file content is to use Pythons `print` method on the created `WeldxFile` instance.\n",
-    "This will print the human readable part of the file that is stored in [YAML format](https://yaml.org/).\n",
-    "However, this gets confusing quickly with increasing file sizes, especially if you are not familiar with the ASDF file format on which WelDX Files are based. \n",
-    "The file we just opened here is no exception.\n",
-    "Therefore we won't print its content this way, but you can try it out yourself if you are intrerested.\n",
-    "Just type `print(wxfile)`.\n",
+    "You can also utilize the `show_asdf_header` method to visualize the file content when using weldx in a pure Python script.\n",
+    "This will print the human readable part of the file that is stored in [YAML format](https://yaml.org/) directly to console.\n",
+    "However, while the interactive output in a jupyter notebook is quite handy, the console output can get pretty large.\n",
+    "This might be simply to much information if you just want to get a simple overview of the file content.\n",
     "\n",
-    "We can get a quick overview of the top level items of the file structue by itrating over its data and printing its keys like this:"
+    "Alternatively, we can get a quick overview of the top level items of the file structue by itrating over its data and printing its keys like this:"
    ]
   },
   {
@@ -82,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for key, value in wxfile.items():\n",
+    "for key in wxfile.keys():\n",
     "    print(key)"
    ]
   },
@@ -110,24 +132,7 @@
    "source": [
     "As you can see, the object we got is of type `CoordinateSystemManager`.\n",
     "We will discuss in more detail in the upcoming tutorials, what you can do with the individual objects that you may find in a `WeldxFile`.\n",
-    "For now, we will only focus on inspecting the file.\n",
-    "\n",
-    "### Inspecting the file content in a Jupyter session\n",
-    "\n",
-    "If you are running a jupyter notebook, you can use the `show_asdf_header` method of `WeldxFile` to get a nicely rendered overview of the file content. \n",
-    "The output might vary if you are running the classic notebook environment or a Jupyter-Lab environment.\n",
-    "In the latter case, you will get an interactive, clickable tree view to navigate through the file content:\n",
-    "\n",
-    "> HINT: Remember that you can start a jupyter-lab version of this notebook in our online documentation by clicking at the binder link at the start of this tutorial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wxfile.show_asdf_header()"
+    "For now, we will only focus on inspecting the file."
    ]
   },
   {
