--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -326,7 +326,7 @@
     ")\n",
     "\n",
     "# create 3d workpiece geometry from the groove profile and trace objects\n",
-    "geometry = geo.Geometry(profile=v_profile, trace=trace)\n",
+    "geometry = geo.Geometry(profile=v_profile, trace_or_length=trace)\n",
     "pointcloud_I = geometry.rasterize(\n",
     "    profile_raster_width=Q_(1, \"mm\"), trace_raster_width=Q_(0.5, \"mm\")\n",
     ")"
@@ -439,7 +439,7 @@
     ")\n",
     "\n",
     "# create 3d workpiece geometry from the groove profile and trace objects\n",
-    "geometry = geo.Geometry(profile=v_profile, trace=trace)\n",
+    "geometry = geo.Geometry(profile=v_profile, trace_or_length=trace)\n",
     "pointcloud_V = geometry.rasterize(\n",
     "    profile_raster_width=Q_(0.25, \"mm\"), trace_raster_width=Q_(0.5, \"mm\")\n",
     ")"
@@ -492,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
