--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -25,6 +25,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -73,6 +74,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -98,6 +100,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -132,6 +135,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -155,6 +159,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -179,6 +184,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -230,6 +236,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -258,6 +265,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -267,7 +275,7 @@
    },
    "outputs": [],
    "source": [
-    "geometry = Geometry(profile=profile, trace=trace)\n",
+    "geometry = Geometry(profile=profile, trace_or_length=trace)\n",
     "geometry.plot(\n",
     "    profile_raster_width=Q_(0.25, \"cm\"),\n",
     "    trace_raster_width=Q_(10, \"cm\"),\n",
@@ -316,6 +324,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -355,6 +364,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -370,7 +380,7 @@
     "    [linear_profile_interpolation_sbs, linear_profile_interpolation_sbs],\n",
     ")\n",
     "\n",
-    "geometry_vp = Geometry(profile=v_profile, trace=trace)\n",
+    "geometry_vp = Geometry(profile=v_profile, trace_or_length=trace)\n",
     "geometry_vp.plot(profile_raster_width=Q_(0.25, \"cm\"), trace_raster_width=Q_(8, \"cm\"))"
    ]
   },
@@ -413,6 +423,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -444,6 +455,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -461,13 +473,6 @@
     "    profile_raster_width=Q_(0.25, \"cm\"), trace_raster_width=Q_(2, \"cm\")\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -486,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
