--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -156,8 +156,8 @@
    "outputs": [],
    "source": [
     "# rasterize geometry\n",
-    "profile_raster_width = 2  # resolution of each profile in mm\n",
-    "trace_raster_width = 30  # space between profiles in mm"
+    "profile_raster_width = \"2mm\"  # resolution of each profile in mm\n",
+    "trace_raster_width = \"30mm\"  # space between profiles in mm"
    ]
   },
   {
@@ -588,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
