--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -106,8 +106,8 @@
     "geometry = Geometry(groove.to_profile(width_default=Q_(5, \"mm\")), trace)\n",
     "\n",
     "# rasterize geometry\n",
-    "profile_raster_width = 2  # resolution of each profile in mm\n",
-    "trace_raster_width = 30  # space between profiles in mm\n",
+    "profile_raster_width = \"2mm\"  # resolution of each profile in mm\n",
+    "trace_raster_width = \"30mm\"  # space between profiles in mm\n",
     "geometry_data_sp = geometry.rasterize(\n",
     "    profile_raster_width=profile_raster_width, trace_raster_width=trace_raster_width\n",
     ")"
@@ -636,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
