Fix first geometry tutorial

--- a/tutorials/geometry_01_profiles.ipynb
+++ b/tutorials/geometry_01_profiles.ipynb
@@ -32,7 +32,8 @@
     "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401 unused import\n",
     "\n",
     "import weldx.geometry as geo\n",
-    "import weldx.transformations as tf"
+    "import weldx.transformations as tf\n",
+    "from weldx import Q_"
    ]
   },
   {
@@ -56,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_segment_0 = geo.LineSegment.construct_with_points([0, 0], [1, 0])"
+    "line_segment_0 = geo.LineSegment.construct_with_points(Q_([0, 0],\"mm\"), Q_([1, 0],\"mm\"))"
    ]
   },
   {
@@ -72,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_segment_1 = geo.LineSegment([[1, 0], [-1, -1]])"
+    "line_segment_1 = geo.LineSegment(Q_([[1, 0], [-1, -1]], \"mm\"))"
    ]
   },
   {
@@ -95,8 +96,8 @@
    "outputs": [],
    "source": [
     "# rasterize both segments\n",
-    "data_line_segment_0 = line_segment_0.rasterize(0.1)\n",
-    "data_line_segment_1 = line_segment_1.rasterize(0.3)\n",
+    "data_line_segment_0 = line_segment_0.rasterize(\"0.1mm\")\n",
+    "data_line_segment_1 = line_segment_1.rasterize(\"0.3mm\")\n",
     "\n",
     "# plot data\n",
     "plt.plot(data_line_segment_0[0], data_line_segment_0[1], \"o\")\n",
@@ -125,15 +126,15 @@
    "source": [
     "# create arc segments\n",
     "arc_segment_0_cw = geo.ArcSegment.construct_with_points(\n",
-    "    [-1, 0], [0, 1], point_center=[0, 0], arc_winding_ccw=False\n",
+    "    Q_([-1, 0], \"mm\"), Q_([0, 1], \"mm\"), point_center=Q_([0, 0], \"mm\"), arc_winding_ccw=False\n",
     ")\n",
     "arc_segment_0_ccw = geo.ArcSegment.construct_with_points(\n",
-    "    [-1, 0], [0, 1], point_center=[0, 0], arc_winding_ccw=True\n",
+    "    Q_([-1, 0], \"mm\"), Q_([0, 1], \"mm\"), point_center=Q_([0, 0], \"mm\"), arc_winding_ccw=True\n",
     ")\n",
     "\n",
     "# rasterize segments\n",
-    "data_arc_segment_0_cw = arc_segment_0_cw.rasterize(0.1)\n",
-    "data_arc_segment_0_ccw = arc_segment_0_ccw.rasterize(0.1)\n",
+    "data_arc_segment_0_cw = arc_segment_0_cw.rasterize(\"0.1mm\")\n",
+    "data_arc_segment_0_ccw = arc_segment_0_ccw.rasterize(\"0.1mm\")\n",
     "\n",
     "# plot data\n",
     "plt.plot(data_arc_segment_0_cw[0], data_arc_segment_0_cw[1], \"o\", label=\"clockwise\")\n",
@@ -167,15 +168,15 @@
    "source": [
     "# create arc segments\n",
     "arc_segment_1_rcp = geo.ArcSegment.construct_with_radius(\n",
-    "    [0, 0], [1, 1], radius=1, center_left_of_line=False, arc_winding_ccw=True\n",
+    "    Q_([0, 0], \"mm\"), Q_([1, 1], \"mm\"), radius=\"1mm\", center_left_of_line=False, arc_winding_ccw=True\n",
     ")\n",
     "arc_segment_1_lcp = geo.ArcSegment.construct_with_radius(\n",
-    "    [0, 0], [1, 1], radius=1, center_left_of_line=True, arc_winding_ccw=True\n",
+    "    Q_([0, 0], \"mm\"), Q_([1, 1], \"mm\"), radius=\"1mm\", center_left_of_line=True, arc_winding_ccw=True\n",
     ")\n",
     "\n",
     "# rasterize segments\n",
-    "data_arc_segment_1_rcp = arc_segment_1_rcp.rasterize(0.1)\n",
-    "data_arc_segment_1_lcp = arc_segment_1_lcp.rasterize(0.1)\n",
+    "data_arc_segment_1_rcp = arc_segment_1_rcp.rasterize(\"0.1mm\")\n",
+    "data_arc_segment_1_lcp = arc_segment_1_lcp.rasterize(\"0.1mm\")\n",
     "\n",
     "# extract center points\n",
     "center_point_right = arc_segment_1_rcp.point_center\n",
@@ -212,14 +213,14 @@
    "outputs": [],
    "source": [
     "# create some segments\n",
-    "segment_0 = geo.LineSegment.construct_with_points([0, 0], [0, 1])\n",
-    "segment_1 = geo.LineSegment.construct_with_points([0, 1], [1, 1])\n",
+    "segment_0 = geo.LineSegment.construct_with_points(Q_([0, 0], \"mm\"), Q_([0, 1], \"mm\"))\n",
+    "segment_1 = geo.LineSegment.construct_with_points(Q_([0, 1], \"mm\"), Q_([1, 1], \"mm\"))\n",
     "segment_2 = geo.ArcSegment.construct_with_points(\n",
-    "    [1, 1], [3, 1], point_center=[2, 1], arc_winding_ccw=False\n",
+    "    Q_([1, 1], \"mm\"), Q_([3, 1], \"mm\"), point_center=Q_([2, 1], \"mm\"), arc_winding_ccw=False\n",
     ")\n",
-    "segment_3 = geo.LineSegment.construct_with_points([3, 1], [4, 1])\n",
-    "segment_4 = geo.LineSegment.construct_with_points([4, 1], [4, 0])\n",
-    "segment_5 = geo.LineSegment.construct_with_points([4, 0], [0, 0])\n",
+    "segment_3 = geo.LineSegment.construct_with_points(Q_([3, 1], \"mm\"), Q_([4, 1], \"mm\"))\n",
+    "segment_4 = geo.LineSegment.construct_with_points(Q_([4, 1], \"mm\"), Q_([4, 0], \"mm\"))\n",
+    "segment_5 = geo.LineSegment.construct_with_points(Q_([4, 0], \"mm\"), Q_([0, 0], \"mm\"))\n",
     "\n",
     "\n",
     "# create a shape\n",
@@ -244,8 +245,8 @@
    "outputs": [],
    "source": [
     "# rasterize shape with different raster width\n",
-    "shape_0_data = shape_0.rasterize(0.1)\n",
-    "shape_0_data_clipped = shape_0.rasterize(10000)\n",
+    "shape_0_data = shape_0.rasterize(\"0.1mm\")\n",
+    "shape_0_data_clipped = shape_0.rasterize(\"10000mm\")\n",
     "\n",
     "# plot data\n",
     "plt.plot(shape_0_data[0], shape_0_data[1], \"bx-\", label=\"raster width = 0.1\")\n",
@@ -293,13 +294,13 @@
    "source": [
     "# create first 2 segments with an empty shape\n",
     "shape_1 = geo.Shape()\n",
-    "shape_1.add_line_segments([[0, 0], [0, 1], [1, 1]])\n",
+    "shape_1.add_line_segments(Q_([[0, 0], [0, 1], [1, 1]], \"mm\"))\n",
     "\n",
     "# add 6 more segments to the existing shape\n",
-    "shape_1.add_line_segments([[0.5, 1.5], [0, 1], [1, 0], [0, 0], [1, 1], [1, 0]])\n",
+    "shape_1.add_line_segments(Q_([[0.5, 1.5], [0, 1], [1, 0], [0, 0], [1, 1], [1, 0]], \"mm\"))\n",
     "\n",
     "# rasterize data\n",
-    "data_shape_1 = shape_1.rasterize(0.05)\n",
+    "data_shape_1 = shape_1.rasterize(\"0.05mm\")\n",
     "\n",
     "# plot\n",
     "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\")\n",
@@ -325,10 +326,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shape_2 = shape_1.translate([-2, 3])\n",
+    "shape_2 = shape_1.translate(Q_([-2, 3], \"mm\"))\n",
     "\n",
     "# rasterize data\n",
-    "data_shape_2 = shape_2.rasterize(0.05)\n",
+    "data_shape_2 = shape_2.rasterize(\"0.05mm\")\n",
     "\n",
     "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\")\n",
     "plt.plot(data_shape_2[0], data_shape_2[1], \"bx\")\n",
@@ -361,7 +362,7 @@
     "shape_3 = shape_1.transform(transformation_matrix)\n",
     "\n",
     "# rasterize\n",
-    "data_shape_3 = shape_3.rasterize(0.05)\n",
+    "data_shape_3 = shape_3.rasterize(\"0.05mm\")\n",
     "\n",
     "# plot all shapes\n",
     "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\")\n",
@@ -386,10 +387,10 @@
    "outputs": [],
    "source": [
     "# reflect across the y axis\n",
-    "shape_4 = shape_1.reflect(reflection_normal=[1, 0])\n",
+    "shape_4 = shape_1.reflect(reflection_normal=Q_([1, 0],\"mm\"))\n",
     "\n",
     "# rasterize\n",
-    "data_shape_4 = shape_4.rasterize(0.05)\n",
+    "data_shape_4 = shape_4.rasterize(\"0.05mm\")\n",
     "\n",
     "# plot all shapes\n",
     "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
@@ -406,10 +407,10 @@
    "outputs": [],
    "source": [
     "# reflect across the horizontal line with y = 2\n",
-    "shape_5 = shape_1.reflect(reflection_normal=[0, 1], distance_to_origin=2)\n",
+    "shape_5 = shape_1.reflect(reflection_normal=Q_([0, 1], \"mm\"), distance_to_origin=\"2mm\")\n",
     "\n",
     "# rasterize\n",
-    "data_shape_5 = shape_5.rasterize(0.05)\n",
+    "data_shape_5 = shape_5.rasterize(\"0.05mm\")\n",
     "\n",
     "# plot all shapes\n",
     "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
@@ -426,10 +427,10 @@
    "outputs": [],
    "source": [
     "# reflect across a line with slope 1 containing the points (0,1) and (0.5, 1.5)\n",
-    "shape_6 = shape_1.reflect(reflection_normal=[-1, 1], distance_to_origin=1 / np.sqrt(2))\n",
+    "shape_6 = shape_1.reflect(reflection_normal=Q_([-1, 1], \"mm\"), distance_to_origin=Q_(1 / np.sqrt(2),\"mm\"))\n",
     "\n",
     "# rasterize\n",
-    "data_shape_6 = shape_6.rasterize(0.05)\n",
+    "data_shape_6 = shape_6.rasterize(\"0.05mm\")\n",
     "\n",
     "# plot all shapes\n",
     "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
@@ -454,17 +455,17 @@
    "outputs": [],
    "source": [
     "# reflect across a line with slope 1 containing the points (0,1) and (0.5, 1.5)\n",
-    "point_0 = [0, 1]\n",
-    "point_1 = [0.5, 1.5]\n",
+    "point_0 = Q_([0, 1], \"mm\")\n",
+    "point_1 = Q_([0.5, 1.5], \"mm\")\n",
     "shape_7 = shape_1.reflect_across_line(point_0, point_1)\n",
     "\n",
     "# rasterize\n",
-    "data_shape_7 = shape_7.rasterize(0.05)\n",
+    "data_shape_7 = shape_7.rasterize(\"0.05mm\")\n",
     "\n",
     "# plot all shapes\n",
     "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
     "plt.plot(data_shape_7[0], data_shape_7[1], \"bx\", label=\"reflected\")\n",
-    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], \"co\", label=\"points\")\n",
+    "plt.plot([point_0[0].m, point_1[0].m], [point_0[1].m, point_1[1].m], \"co\", label=\"points\")\n",
     "plt.plot([-1, 2], [0, 3], \"y--\", label=\"line of reflection\")\n",
     "plt.grid()\n",
     "plt.legend(loc=\"upper right\")\n",
@@ -485,20 +486,20 @@
    "outputs": [],
    "source": [
     "# reflect across a line with slope 1 containing the points (-2,1) and (2, -4.5)\n",
-    "point_0 = [-2, 1]\n",
-    "point_1 = [2, -4.5]\n",
+    "point_0 = Q_([-2, 1], \"mm\")\n",
+    "point_1 = Q_([2, -4.5], \"mm\")\n",
     "shape_8 = shape_1.reflect_across_line(point_0, point_1)\n",
     "\n",
     "# rasterize\n",
-    "data_shape_8 = shape_8.rasterize(0.05)\n",
+    "data_shape_8 = shape_8.rasterize(\"0.05mm\")\n",
     "\n",
     "# plot all shapes\n",
     "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
     "plt.plot(data_shape_8[0], data_shape_8[1], \"bx\", label=\"reflected\")\n",
-    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], \"co\", label=\"points\")\n",
+    "plt.plot([point_0[0].m, point_1[0].m], [point_0[1].m, point_1[1].m], \"co\", label=\"points\")\n",
     "plt.plot(\n",
-    "    [point_0[0], point_1[0]],\n",
-    "    [point_0[1], point_1[1]],\n",
+    "    [point_0[0].m, point_1[0].m],\n",
+    "    [point_0[1].m, point_1[1].m],\n",
     "    \"y--\",\n",
     "    label=\"line of reflection\",\n",
     ")\n",
@@ -524,15 +525,15 @@
    "source": [
     "# create shapes\n",
     "shape_9 = geo.Shape()\n",
-    "shape_9.add_line_segments([[0, 1], [1.5, 1], [3, 0.25], [3, -1], [0, -1], [0, 1]])\n",
-    "shape_10 = shape_9.reflect(reflection_normal=[1, 0], distance_to_origin=3.5)\n",
+    "shape_9.add_line_segments(Q_([[0, 1], [1.5, 1], [3, 0.25], [3, -1], [0, -1], [0, 1]], \"mm\"))\n",
+    "shape_10 = shape_9.reflect(reflection_normal=Q_([1, 0], \"mm\"), distance_to_origin=\"3.5mm\")\n",
     "\n",
     "# create profile\n",
     "profile_0 = geo.Profile(shape_9)\n",
     "profile_0.add_shapes(shape_10)\n",
     "\n",
     "# rasterize\n",
-    "data_profile_0 = profile_0.rasterize(0.1)\n",
+    "data_profile_0 = profile_0.rasterize(\"0.1mm\")\n",
     "\n",
     "# plot\n",
     "plt.plot(data_profile_0[0], data_profile_0[1], \"rx\")\n",
@@ -634,12 +635,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from weldx.constants import WELDX_UNIT_REGISTRY as UREG\n",
+    "\n",
+    "_DEFAULT_LEN_UNIT = UREG.millimeters\n",
+    "\n",
     "class SineWaveSegmentBase:\n",
+    "    @UREG.wraps(None, (None, _DEFAULT_LEN_UNIT, _DEFAULT_LEN_UNIT, None, _DEFAULT_LEN_UNIT), strict=True)\n",
     "    def __init__(self, point_start, point_end, num_half_waves, amplitude=1):\n",
-    "        self._points = np.array([point_start, point_end], float).transpose()\n",
+    "        self._points = np.array([point_start.tolist(), point_end.tolist()], float).transpose()\n",
     "        self._num_half_waves = num_half_waves\n",
     "\n",
-    "        vector_start_end = self.point_end - self.point_start\n",
+    "        vector_start_end = self.point_end.m - self.point_start.m\n",
     "        normal = np.array([-vector_start_end[1], vector_start_end[0]], float)\n",
     "\n",
     "        self._amplitude_vector = (\n",
@@ -647,16 +653,18 @@
     "        )\n",
     "\n",
     "    @property\n",
+    "    @UREG.wraps(_DEFAULT_LEN_UNIT, (None,), strict=True)\n",
     "    def point_start(self):\n",
     "        return self._points[:, 0]\n",
     "\n",
     "    @property\n",
+    "    @UREG.wraps(_DEFAULT_LEN_UNIT, (None,), strict=True)\n",
     "    def point_end(self):\n",
     "        return self._points[:, 1]\n",
     "\n",
     "    def _calculate_points_on_line(self, raster_width):\n",
     "        # calculate distance between start and end point\n",
-    "        vector_start_end = self.point_end - self.point_start\n",
+    "        vector_start_end = self.point_end.m - self.point_start.m\n",
     "        distance = np.linalg.norm(vector_start_end)\n",
     "\n",
     "        # normalized effective raster width\n",
@@ -675,6 +683,7 @@
     "        angles = np.arange(0, total_range + 0.5 * increment, increment)\n",
     "        return np.sin(angles) * self._amplitude_vector\n",
     "\n",
+    "    @UREG.wraps(_DEFAULT_LEN_UNIT, (None, _DEFAULT_LEN_UNIT), strict=True)\n",
     "    def rasterize(self, raster_width):\n",
     "        points_on_line = self._calculate_points_on_line(raster_width)\n",
     "        offsets = self._calculate_offsets(points_on_line.shape[1] - 1)\n",
@@ -696,14 +705,14 @@
    "outputs": [],
    "source": [
     "# create custom segment\n",
-    "sw_base_segment = SineWaveSegmentBase([0, 0], [5, 5], 5, 1)\n",
+    "sw_base_segment = SineWaveSegmentBase(Q_([0, 0], \"mm\"), Q_([5, 5], \"mm\"), 5, \"1mm\")\n",
     "\n",
     "# create a shape\n",
     "shape_11 = geo.Shape(sw_base_segment)\n",
-    "shape_11.add_line_segments([[10, 0], [5, -5], [0, 0]])\n",
+    "shape_11.add_line_segments(Q_([[10, 0], [5, -5], [0, 0]], \"mm\"))\n",
     "\n",
     "# rasterize\n",
-    "data_shape_11 = shape_11.rasterize(0.25)\n",
+    "data_shape_11 = shape_11.rasterize(\"0.25mm\")\n",
     "\n",
     "\n",
     "# plot data\n",
@@ -755,13 +764,15 @@
    "outputs": [],
    "source": [
     "class SineWaveSegmentFull(SineWaveSegmentBase):\n",
-    "    def __init__(self, point_start, point_end, num_half_waves, amplitude=1):\n",
+    "    def __init__(self, point_start, point_end, num_half_waves, amplitude=\"1mm\"):\n",
     "        super().__init__(point_start, point_end, num_half_waves, amplitude)\n",
-    "\n",
+    "        \n",
+    "    @UREG.wraps(None, (None, _DEFAULT_LEN_UNIT), strict=True)\n",
     "    def apply_translation(self, vector):\n",
     "        self._points += np.ndarray((2, 1), float, np.array(vector, float))\n",
     "        return self\n",
     "\n",
+    "    @UREG.check(None, _DEFAULT_LEN_UNIT)\n",
     "    def translate(self, vector):\n",
     "        new_segment = copy.deepcopy(self)\n",
     "        return new_segment.apply_translation(vector)\n",
@@ -790,37 +801,37 @@
    "outputs": [],
    "source": [
     "# create custom segment\n",
-    "sw_full_segment = SineWaveSegmentFull([0, 0], [5, 5], 4, 2)\n",
+    "sw_full_segment = SineWaveSegmentFull(Q_([0, 0], \"mm\"), Q_([5, 5], \"mm\"), 4, \"2mm\")\n",
     "\n",
     "# create a shape\n",
     "shape_12 = geo.Shape(sw_full_segment)\n",
-    "shape_12.add_line_segments([[10, 0], [5, -5], [0, 0]])\n",
+    "shape_12.add_line_segments(Q_([[10, 0], [5, -5], [0, 0]], \"mm\"))\n",
     "\n",
     "# create translated copy\n",
-    "shape_13 = shape_12.translate([-14, 7])\n",
+    "shape_13 = shape_12.translate(Q_([-14, 7], \"mm\"))\n",
     "\n",
     "# create a distorted and translated copy\n",
     "shape_14 = shape_12.transform([[2, 0], [0, 0.5]])\n",
-    "shape_14.apply_translation([0, 10])\n",
+    "shape_14.apply_translation(Q_([0, 10], \"mm\"))\n",
     "\n",
     "# create a rotated and translated copy\n",
     "s = np.sin(-np.pi / 4)\n",
     "c = np.cos(-np.pi / 4)\n",
     "shape_15 = shape_12.transform([[c, -s], [s, c]])\n",
-    "shape_15.apply_translation([25, 10])\n",
+    "shape_15.apply_translation(Q_([25, 10], \"mm\"))\n",
     "\n",
     "# create a reflected copy\n",
-    "point_0 = [-5, 0]\n",
-    "point_1 = [0, -10]\n",
+    "point_0 = Q_([-5, 0], \"mm\")\n",
+    "point_1 = Q_([0, -10], \"mm\")\n",
     "shape_16 = shape_12.reflect_across_line(point_0, point_1)\n",
     "\n",
     "\n",
     "# rasterize\n",
-    "data_shape_12 = shape_12.rasterize(0.25)\n",
-    "data_shape_13 = shape_13.rasterize(0.25)\n",
-    "data_shape_14 = shape_14.rasterize(0.25)\n",
-    "data_shape_15 = shape_15.rasterize(0.25)\n",
-    "data_shape_16 = shape_16.rasterize(0.25)\n",
+    "data_shape_12 = shape_12.rasterize(\"0.25mm\")\n",
+    "data_shape_13 = shape_13.rasterize(\"0.25mm\")\n",
+    "data_shape_14 = shape_14.rasterize(\"0.25mm\")\n",
+    "data_shape_15 = shape_15.rasterize(\"0.25mm\")\n",
+    "data_shape_16 = shape_16.rasterize(\"0.25mm\")\n",
     "\n",
     "# plot data\n",
     "plt.plot(data_shape_12[0], data_shape_12[1], \"r\", label=\"original\")\n",
@@ -828,10 +839,10 @@
     "plt.plot(data_shape_14[0], data_shape_14[1], \"g\", label=\"distorted and translated\")\n",
     "plt.plot(data_shape_15[0], data_shape_15[1], \"k\", label=\"rotated and translated\")\n",
     "plt.plot(data_shape_16[0], data_shape_16[1], \"m\", label=\"reflected\")\n",
-    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], \"co\", label=\"points\")\n",
+    "plt.plot([point_0[0].m, point_1[0].m], [point_0[1].m, point_1[1].m], \"co\", label=\"points\")\n",
     "plt.plot(\n",
-    "    [point_0[0], point_1[0]],\n",
-    "    [point_0[1], point_1[1]],\n",
+    "    [point_0[0].m, point_1[0].m],\n",
+    "    [point_0[1].m, point_1[1].m],\n",
     "    \"y--\",\n",
     "    label=\"line of reflection\",\n",
     ")\n",
@@ -864,7 +875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
