Fix welding examples

--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "groove.plot(raster_width=0.2)"
+    "groove.plot(raster_width=\"0.2mm\")"
    ]
   },
   {
@@ -563,13 +563,6 @@
    "source": [
     "file.show_asdf_header()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
