--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "# define the weld seam length in mm\n",
-    "seam_length = 150\n",
+    "seam_length = Q_(150, \"mm\")\n",
     "\n",
     "# create a linear trace segment a the complete weld seam trace\n",
     "trace_segment = LinearHorizontalTraceSegment(seam_length)\n",
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "tcp_start_point = Q_([5.0, 0.0, 2.0], \"mm\")\n",
-    "tcp_end_point = Q_([seam_length - 5.0, 0.0, 2.0], \"mm\")\n",
+    "tcp_end_point = Q_([seam_length.m - 5.0, 0.0, 2.0], \"mm\")\n",
     "\n",
     "v_weld = Q_(10, \"mm/s\")\n",
     "s_weld = (tcp_end_point - tcp_start_point)[0]  # length of the weld\n",
