Fix more notebooks

--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -321,7 +321,7 @@
    "source": [
     "v_profile = geo.VariableProfile(\n",
     "    [groove_1.to_profile(), groove_2.to_profile()],\n",
-    "    [0, 100],\n",
+    "    Q_([0, 100], \"mm\"),\n",
     "    [geo.linear_profile_interpolation_sbs],\n",
     ")\n",
     "\n",
@@ -348,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = distance(pointcloud_I, \"tcp_wire\", time=time)\n",
+    "d = distance(pointcloud_I.m, \"tcp_wire\", time=time)\n",
     "plt.plot(d)"
    ]
   },
@@ -368,7 +368,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = distance(pointcloud_I, \"tcp_sine_y\", time=time)\n",
+    "d = distance(pointcloud_I.m, \"tcp_sine_y\", time=time)\n",
     "plt.plot(d)"
    ]
   },
@@ -386,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = distance(pointcloud_I, \"tcp_sine_z\", time=time)\n",
+    "d = distance(pointcloud_I.m, \"tcp_sine_z\", time=time)\n",
     "plt.plot(d)"
    ]
   },
@@ -434,7 +434,7 @@
    "source": [
     "v_profile = geo.VariableProfile(\n",
     "    [groove_1.to_profile(), groove_2.to_profile()],\n",
-    "    [0, 100],\n",
+    "    Q_([0, 100], \"mm\"),\n",
     "    [geo.linear_profile_interpolation_sbs],\n",
     ")\n",
     "\n",
@@ -458,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = distance(pointcloud_V, \"tcp_sine_z\", time=time)\n",
+    "d = distance(pointcloud_V.m, \"tcp_sine_z\", time=time)\n",
     "plt.plot(d)"
    ]
   },
