--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_profile.plot(title=\"V-Groove\", raster_width=0.5, grid=False, line_style=\"rx\")"
+    "v_profile.plot(title=\"V-Groove\", raster_width=\"0.5mm\", grid=False, line_style=\"rx\")"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
